--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "redux-thunk": "^2.1.0",
     "request": "^2.72.0",
     "run-sequence": "^1.2.2",
+    "sanitizer": "^0.1.3",
     "sendgrid": "^4.7.1",
     "serve-favicon": "~2.3.0",
     "shortid": "^2.2.6",
